# serial-sensors-proto

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/serial-sensors-proto/: Cargo.toml
crates/serial-sensors-proto-derive/: Cargo.toml
crates/serial-sensors-proto-derive/src/: lib.rs
crates/serial-sensors-proto-traits/: Cargo.toml
crates/serial-sensors-proto-traits/src/: lib.rs
crates/serial-sensors-proto/src/: data_types.rs  lib.rs  scalar.rs  sensor_id.rs  serializer.rs  test.rs  types.rs  vector3.rs  vector4.rs
crates/serial-sensors-proto/src/data_types/: identifier.rs  linear_ranges.rs  scalar.rs  vector2.rs  vector3.rs  vector4.rs
crates/serial-sensors-proto/src/versions/: protocol_version.rs  version_1.rs
src/: lib.rs  protocol_version.rs  scalar.rs  types.rs  vector3.rs  vector4.rs  versions.rs
src/versions/: protocol_version.rs  version_1.rs
