[workspace.package]
version = "0.2.0"
description = "A simple wire format for transmitting MEMS sensor data and friends"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
categories = ["no-std", "no-std::no-alloc", "embedded", "hardware-support"]
edition = "2021"
license = "EUPL-1.2"
rust-version = "1.71.0"
repository = "https://github.com/sunsided/serial-sensors-proto"
homepage = "https://github.com/sunsided/serial-sensors-proto"

[workspace]
resolver = "2"
members = [
    "crates/serial-sensors-proto",
    "crates/serial-sensors-proto-derive"
]
default-members = [
    "crates/serial-sensors-proto"
]
