[package]
name = "serial-sensors-proto-derive"
description = "A simple wire format for transmitting MEMS sensor data and friends"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
syn = "2.0.68"
quote = "1.0"
proc-macro2 = "1.0"
serial-sensors-proto-traits = { version = "*", path = "../serial-sensors-proto-traits" }
darling = "0.20.9"

[lib]
proc-macro = true
