[package]
name = "serial-sensors-proto"
description = "A simple wire format for transmitting MEMS sensor data and friends"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[features]
std = ["bincode/std", "corncobs/std"]
alloc = ["bincode/alloc"]
micromath = ["dep:micromath"]
quaternion = ["dep:micromath", "micromath/quaternion"]
unsafe = []
defmt = ["dep:defmt"]

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
corncobs = "0.1.3"
defmt = { version = "0.3.8", optional = true }
micromath = { version = "2.1.0", optional = true, features = ["vector"] }
serial-sensors-proto-derive = { version = "0.2.3", path = "../serial-sensors-proto-derive" }
uniform-array-derive = "0.1.0"

[dev-dependencies]
ensure-uniform-type = "0.1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
